<resources>
    <string name="app_name">ApniGaadi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">Mobile no.</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="Dashboard">DashBoard</string>
    <string name="AddVehicle">Add vehicle</string>
    <string name="RentVehicle">Rent Vehicle</string>
    <string name="profile">Profile</string>
    <string name="Logout">Logout</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
