<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/dashboard"
            android:icon="@drawable/dashboard"
            android:title="@string/Dashboard" />
        <item
            android:id="@+id/addvehicle"
            android:icon="@drawable/add"
            android:title="@string/AddVehicle" />
        <item
            android:id="@+id/rentvehicle"
            android:icon="@drawable/rent"
            android:title="@string/RentVehicle" />
        <item
            android:id="@+id/profile"
            android:icon="@drawable/profile"
            android:title="@string/profile" />

       <item android:id="@+id/logout"
           android:icon="@drawable/logout"
           android:title="@string/Logout"></item>
    </group>


</menu>
